--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
         <h1>Translation service</h1>
-        <div>Enter the text you wish to translate, choose the language, and click Translate!</div>
+        <div>Enter the text you wish to translate, choose the language, and then click Translate!</div>
         <div>
             <form method="POST">
                 <div class="form-group">
